[package]
name = "pmrs"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
dirs = "5.0.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.71"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.24"
psutil = "3.2.2"
cli-table = "0.4"
chrono-humanize = "0.2.2"
